--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Project 5</string>
+    <string name="app_name">HUNGRY HUNGRY PIZZA</string>
     <string name="chicago">Chicago</string>
     <string name="new_york">New York</string>
     <string name="current">Current Order</string>
