--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,11 @@
     <string name="current">Current Order</string>
     <string name="store">Store Orders</string>
     <string name="ChicagoStyleTitle">Chicago Style Pizza</string>
-    <string name="Crust">Crust</string>
+    <string name="newYorkStyleTitle">New York Style Pizza</string>
+    <string name="Crust">Crust: </string>
+    <string name="Topping">Toppings: </string>
+    <string name="Add">Add to Order</string>
+    <string name="Flavor">Flavors</string>
+    <string name="Size">Sizes</string>
+
 </resources>
